--- a/silicon-design/package.json
+++ b/silicon-design/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "leaflet": "^1.9.4",
+    "react-router-dom": "^6.27.0",
+    "sass": "^1.80.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -23,6 +26,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "vite": "^5.4.8"
+    "vite": "^5.4.9"
   }
 }
